package edu.fiuba.algo3.modelo.Tablero.Arista;

import edu.fiuba.algo3.modelo.Jugador.Jugador;
import edu.fiuba.algo3.modelo.Tablero.Vertice.Vertice;

import java.util.List;


public interface EstadoArista {
    void construirCarretera (Arista self, Jugador jugador, List<Vertice> extremos);
}
