package edu.fiuba.algo3.modelo.Tablero.Arista;

import edu.fiuba.algo3.modelo.Exception.AristaOcupadaNoSePuedeConstruir;
import edu.fiuba.algo3.modelo.Jugador.Jugador;
import edu.fiuba.algo3.modelo.Tablero.Vertice.Vertice;

import java.util.List;

public class Ocupada implements  EstadoArista {
    @Override
    public void construirCarretera(Arista self, Jugador jugador, List<Vertice> extremos) {
        throw new AristaOcupadaNoSePuedeConstruir("La Arista esta ocupada");
    }
}
